--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,4 @@
-mkdir -p .github/workflows && cat > .github/workflows/deploy.yml << 'EOF'
-name: Deploy to GitHub Pages
+name: Pdf-tools
 on:
   push:
     branches: [ main ]
@@ -43,4 +42,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-EOF
